--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react-dom": "^16.9.8",
     "@types/reactstrap": "^8.4.2",
     "axios": "^0.19.2",
+    "html-entities-decode": "^1.0.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
